--- a/index.html
+++ b/index.html
@@ -1187,7 +1187,12 @@ function playFraudDetective(){
     <p style="margin-top:10px; font-size:13px; opacity:.8;">Every character change = new hash = new proof required.</p>
   `, "Fraud Detective Mode");
 }
-    
+
+<button onclick="document.getElementById('gameBox').style.display='none'"
+        style="float:right; background:none; border:none; font-size:20px; cursor:pointer;">
+✕
+</button>
+
   </script>
 </body>
 </html>
