--- a/index.html
+++ b/index.html
@@ -546,6 +546,8 @@
       </p>
       <div id="comparison" class="compare-box" style="display:none;"></div>
     </div>
+    <div id="gameBox" class="card" style="margin-top:14px; display:none;"></div>
+
 
     <!-- TIMELINE -->
     <div class="card" id="timelineCard">
