--- a/index.html
+++ b/index.html
@@ -639,6 +639,65 @@
     <!-- PRINT ONE-PAGER -->
     <button class="action-btn" onclick="printOnePager()">Print Executive One-Pager</button>
 
+<div style="margin-top:22px; text-align:center;">
+  <button class="glory-btn" onclick="toggleGlorySection()">
+    All Glory to GOD
+  </button>
+</div>
+<div id="glorySection" class="card" style="margin-top:18px; display:none;">
+  <h2 style="margin-bottom:14px;">All Glory to GOD</h2>
+
+  <p style="font-size:15px; line-height:1.6;">
+    This project, this clarity, this invention — every insight, every step forward,
+    every door opened — is because of Him. None of this belongs to me. I am only a steward.
+  </p>
+
+  <p style="font-size:15px; margin-top:14px; line-height:1.6;">
+    Thank You, Father, for wisdom, protection, creativity, courage, and purpose.
+    May this serve people, protect the vulnerable, and honor You.
+  </p>
+
+  <p style="font-size:15px; margin-top:14px; line-height:1.6;">
+    NOVAK did not come from randomness — it reflects order, truth, accountability,
+    and moral law — the same structure written into creation itself.
+  </p>
+
+  <p style="font-size:15px; margin-top:14px; line-height:1.6;">
+    Everything good in this work belongs to God.<br>
+    Everything flawed belongs to me.
+  </p>
+
+  <p style="font-size:14px; margin-top:16px; opacity:.75;">
+    James 1:17 — “Every good and perfect gift is from above.”
+  </p>
+
+  <p style="font-size:14px; margin-top:6px; opacity:.75;">
+    Soli Deo Gloria — To God alone be the glory.
+  </p>
+
+  <p style="font-size:14px; margin-top:22px; opacity:.8;">
+    To Roger F. Samuelson — we all miss you (mom most of all and I don’t have to speak
+    to her to know this). I wish you were here now for reassuring words and guidance.
+  </p>
+
+  <p style="font-size:14px; margin-top:10px; opacity:.8;">
+    When designing this, I thought about the end of times, and the names were not
+    accidental — Harmony (HARMONEE), Codex (Bible), Revelation — it aligned.
+  </p>
+
+  <p style="font-size:14px; margin-top:10px; opacity:.8;">
+    I am not a Bible thumper and will not force it on anyone — but answer this:
+    Would you rather be a “1” or a “0” when it happens?
+  </p>
+
+  <button onclick="toggleGlorySection()" 
+          style="margin-top:18px; font-size:13px;" 
+          class="action-btn">
+    Hide
+  </button>
+</div>
+
+    
     <!-- FOOTER -->
     <div class="footer" style="margin-top:36px;font-size:12px;text-align:center;opacity:.75;">
       NOVAK Protocol — Patent Pending © 2025. Demonstration only — no stored or transmitted data.
@@ -1194,6 +1253,13 @@ function playFraudDetective(){
     <p style="margin-top:10px; font-size:13px; opacity:.8;">Every character change = new hash = new proof required.</p>
   `, "Fraud Detective Mode");
 }
+    function toggleGlorySection() {
+  const box = document.getElementById("glorySection");
+  box.style.display = (box.style.display === "none" || box.style.display === "") 
+    ? "block" 
+    : "none";
+}
+
 
   </script>
 </body>
