--- a/index.html
+++ b/index.html
@@ -335,6 +335,12 @@
   color: white;
 }
 
+function toggleHowWorks() {
+  const box = document.getElementById("howWorksBox");
+  box.style.display = (box.style.display === "none" || box.style.display === "")
+    ? "block"
+    : "none";
+}
 
 
     /* Small-screen tweaks */
