--- a/index.html
+++ b/index.html
@@ -563,6 +563,11 @@ function toggleHowWorks() {
       <button class="action-btn" onclick="exportCertificate()">Export Integrity Certificate (PDF)</button>
     </div>
 
+    <button class="action-btn" onclick="printOnePager()">
+  Generate Executive Preview (PDF)
+  </button>
+
+
     <!-- BEFORE/AFTER -->
     <div class="card">
       <h3>Before/After Comparison</h3>
@@ -692,6 +697,24 @@ function toggleHowWorks() {
 
     
     <!-- FOOTER -->
+
+    <div class="card" style="margin-top:26px; text-align:center;">
+  <h3>Interactive NOVAK Mini-Games</h3>
+  <p style="font-size:14px; opacity:.75; margin-top:6px;">
+    Learn NOVAK through play — fraud spotting, hash matching, integrity puzzles.
+  </p>
+
+  <div style="display:flex; flex-wrap:wrap; gap:12px; justify-content:center; margin-top:14px;">
+    <button class="action-btn" onclick="playTamperGame()">Spot the Tampered Claim</button>
+    <button class="action-btn" onclick="playHashMatch()">Hash Matching Memory</button>
+    <button class="action-btn" onclick="playKeyGame()">Find the Valid Key</button>
+    <button class="action-btn" onclick="playFraudDetective()">Fraud Detective Mode</button>
+  </div>
+</div>
+
+<!-- Mini-game display box -->
+<div id="gameBox" class="card" style="margin-top:14px; display:none;"></div>
+
     <div class="footer" style="margin-top:36px;font-size:12px;text-align:center;opacity:.75;">
       NOVAK Protocol — Patent Pending © 2025. Demonstration only — no stored or transmitted data.
     </div>
