--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="header">
     <div class="logo">NOVAK Protocol</div>
 
-    <a href="https://www.novakprotocol.com" target="_blank" class="home-link">
+    <a href="http://www.novakprotocol.com" target="_blank" class="home-link">
       novakprotocol.com
     </a>
 
