--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
     </p>
 
     <p class="analogy">
-      SHA-256 is the steel the NSA engineered — NOVAK is the vault door that
-      refuses to open unless everything matches.
+    SHA-256 is the steel. NOVAK is the vault door, hinges, lock, alarm system, and guard — ensuring automation cannot act without proof.
     </p>
 
     <button class="dismiss-btn" onclick="dismissWhyNovak()">✅ Don’t show this again</button>
