--- a/index.html
+++ b/index.html
@@ -2,189 +2,159 @@
 <html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>NOVAK Protocol — Integrity Proof Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NOVAK Protocol — Proof-Before-Action Integrity Demo</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=JetBrains+Mono&display=swap" rel="stylesheet" />
 
   <style>
-    /* ========= RESET ========= */
-    *, *::before, *::after {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin:0; padding:0; box-sizing:border-box; font-family:"Inter",sans-serif; }
 
-    html, body {
-      font-family: "Inter", sans-serif;
-      scroll-behavior: smooth;
-      background: var(--bg);
-      color: var(--text);
-    }
-
-    body {
-      padding: 26px;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    /* ========= THEME VARIABLES ========= */
     :root {
-      --blue: #1a4fb3;
-      --blue-hover: #0f357f;
-      --green: #1c9c51;
-      --red: #c72d2d;
-      --gold: #e6b800;
-
-      --bg-light: #f5f8ff;
-      --bg-dark: #0e1529;
-
-      --text-light: #091326;
-      --text-dark: #e8eefc;
-
-      --card-light: #ffffff;
-      --card-dark: #172238;
-
-      --border-light: #d5d9e5;
-      --border-dark: #313f57;
+      --blue:#1a4fb3;
+      --blue-hover:#0e3580;
+      --bg-light:#f8fafc;
+      --bg-dark:#0f172a;
+      --text-light:#0b1326;
+      --text-dark:#e7edf7;
+      --card-light:#ffffff;
+      --card-dark:#1e293b;
+      --border-light:#d4d8e1;
+      --border-dark:#334155;
+      --success:#0d9c4f;
+      --danger:#d7263d;
+      --gold:#f4c542;
     }
 
     html[data-theme="light"] {
-      --bg: var(--bg-light);
-      --text: var(--text-light);
-      --card: var(--card-light);
-      --border: var(--border-light);
+      --bg:var(--bg-light);
+      --text:var(--text-light);
+      --card:var(--card-light);
+      --border:var(--border-light);
     }
-
     html[data-theme="dark"] {
-      --bg: var(--bg-dark);
-      --text: var(--text-dark);
-      --card: var(--card-dark);
-      --border: var(--border-dark);
+      --bg:var(--bg-dark);
+      --text:var(--text-dark);
+      --card:var(--card-dark);
+      --border:var(--border-dark);
     }
 
-    /* ========= HEADER ========= */
+    body {
+      background:var(--bg);
+      color:var(--text);
+      padding:28px;
+      transition:.35s ease;
+    }
+
+    .container {
+      width:100%;
+      max-width:1080px;
+      margin:auto;
+    }
+
+    /* HEADER */
     .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      margin-bottom: 18px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      margin-bottom:12px;
+      flex-wrap:wrap;
+      gap:10px;
     }
 
     .logo {
-      font-size: 40px;
-      font-weight: 700;
-      color: var(--blue);
+      font-size:36px;
+      font-weight:700;
+      color:var(--blue);
+      letter-spacing:-0.5px;
     }
 
-    .site-link {
-      font-size: 16px;
-      text-decoration: none;
-      color: var(--blue);
-      font-weight: 600;
-    }
-    .site-link:hover {
-      opacity: 0.7;
-    }
-
+    /* THEME TOGGLE */
     .theme-toggle {
-      padding: 7px 16px;
-      cursor: pointer;
-      border-radius: 6px;
-      border: 1px solid var(--blue);
-      background: transparent;
-      color: var(--blue);
-      transition: 0.25s;
-      font-size: 14px;
+      border:1px solid var(--blue);
+      padding:6px 14px;
+      border-radius:6px;
+      font-size:14px;
+      background:transparent;
+      color:var(--blue);
+      cursor:pointer;
+      transition:.25s;
     }
     .theme-toggle:hover {
-      background: var(--blue);
-      color: white;
+      background:var(--blue);
+      color:white;
     }
 
-    /* ========= AUDIENCE NAV ========= */
+    /* AUDIENCE NAV */
     .nav {
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      margin-top: 10px;
-      margin-bottom: 16px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px;
+      margin:18px 0;
     }
-
     .nav button {
-      padding: 9px 20px;
-      border-radius: 7px;
-      border: 1px solid var(--blue);
-      background: transparent;
-      color: var(--blue);
-      cursor: pointer;
-      font-size: 14px;
-      transition: 0.25s;
+      border:1px solid var(--blue);
+      background:transparent;
+      padding:8px 16px;
+      border-radius:6px;
+      font-size:14px;
+      cursor:pointer;
+      transition:.25s;
+      color:var(--blue);
     }
-
     .nav button:hover,
     .nav button.active {
-      background: var(--blue);
-      color: white;
+      background:var(--blue);
+      color:white;
     }
 
-    /* ========= CARD ========= */
+    /* CARD */
     .card {
-      background: var(--card);
-      border-radius: 12px;
-      border: 1px solid var(--border);
-      padding: 24px;
-      margin-top: 22px;
-      animation: fadeIn 0.35s ease;
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:12px;
+      padding:22px;
+      margin-top:26px;
+      transition:.35s ease;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(8px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* ========= EXPLAINER BUTTON ROW ========= */
-    .explain-btn-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 12px;
-      margin-top: 20px;
-      margin-bottom: 5px;
-    }
-
+    /* BUTTONS */
     .action-btn {
-      padding: 10px 18px;
-      border-radius: 7px;
-      border: none;
-      background: var(--blue);
-      color: white;
-      font-size: 14px;
-      cursor: pointer;
-      transition: 0.25s;
-      display: flex;
-      gap: 6px;
-      align-items: center;
+      padding:8px 16px;
+      border-radius:6px;
+      border:none;
+      cursor:pointer;
+      background:var(--blue);
+      color:white;
+      font-size:14px;
+      transition:.25s;
+      white-space:nowrap;
     }
-
     .action-btn:hover {
-      background: var(--blue-hover);
+      background:var(--blue-hover);
     }
 
-    /* ========= COLLAPSIBLE EXPLAINERS ========= */
-    .explainer {
-      display: none;
-      margin-top: 8px;
+    /* ANALOGY BUTTON ROW */
+    .bubble-row {
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      margin-top:14px;
     }
 
-    /* ========= MOBILE ========= */
-    @media (max-width: 600px) {
-      body { padding: 14px; }
-      .logo { font-size: 32px; }
+    .bubble-btn {
+      padding:8px 16px;
+      border-radius:20px;
+      border:none;
+      font-size:14px;
+      cursor:pointer;
+      background:#e8eefc;
+      color:#1a3d8b;
+      transition:.25s;
+    }
+    .bubble-btn:hover {
+      background:#cddcff;
     }
   </style>
 </head>
@@ -192,49 +162,64 @@
 <body>
 <div class="container">
 
-  <!-- ✅ HEADER -->
-  <header class="header">
+  <!-- HEADER -->
+  <div class="header">
     <div class="logo">NOVAK Protocol</div>
-
-    <a href="http://www.novakprotocol.com" target="_blank" class="site-link">
-      novakprotocol.com
-    </a>
-
     <button class="theme-toggle" onclick="toggleTheme()">Light/Dark</button>
-  </header>
-
-  <!-- ✅ AUDIENCE NAV -->
-  <nav class="nav">
-    <button id="btn-public" class="active" onclick="setAudience('public')">Public</button>
-    <button id="btn-government" onclick="setAudience('government')">Government</button>
-    <button id="btn-investor" onclick="setAudience('investor')">Investor</button>
-    <button id="btn-cyber" onclick="setAudience('cyber')">Cybersecurity</button>
-    <button id="btn-academic" onclick="setAudience('academic')">Academic</button>
-  </nav>
-
-  <!-- ✅ AUDIENCE DESCRIPTION -->
-  <p id="description" style="font-size:17px; margin-bottom:16px;">
-    NOVAK proves data integrity instantly — no tech degree required.
-  </p>
-
-  <!-- ✅ ANALOGY + EXPLAINER BUTTONS -->
-  <div class="explain-btn-row">
-    <button class="action-btn" onclick="toggleExplainer('exp1')">🤯 I don’t get it</button>
-    <button class="action-btn" onclick="toggleExplainer('expMilkshake')">🥤 Milkshake Analogy</button>
-    <button class="action-btn" onclick="toggleExplainer('expColor')">🖍️ Colored Pencil Analogy</button>
-    <button class="action-btn" onclick="toggleExplainer('expKey')">🔑 Key Analogy</button>
-    <button class="action-btn" onclick="toggleExplainer('expAlready')">🤔 Don’t we already do this?</button>
-    <button class="action-btn" onclick="toggleExplainer('expGov')">🏛️ Government Savings</button>
-    <button class="action-btn" onclick="toggleExplainer('expHow')">👀 Show Me How This Works</button>
   </div>
 
-  <!-- ✅ COLLAPSIBLE EXPLAINER BOXES -->
-  <section id="exp1" class="card explainer"></section>
-  <section id="expMilkshake" class="card explainer"></section>
-  <section id="expColor" class="card explainer"></section>
-  <section id="expKey" class="card explainer"></section>
-  <section id="expAlready" class="card explainer"></section>
-  <section id="expGov" class="card explainer"></section>
-  <section id="expHow" class="card explainer"></section>
+  <!-- AUDIENCE SELECTOR -->
+  <div class="nav">
+    <button onclick="setAudience('public')" class="active" id="btn-public">Public</button>
+    <button onclick="setAudience('government')" id="btn-government">Government</button>
+    <button onclick="setAudience('investor')" id="btn-investor">Investor</button>
+    <button onclick="setAudience('cyber')" id="btn-cyber">Cybersecurity</button>
+    <button onclick="setAudience('academic')" id="btn-academic">Academic</button>
+  </div>
+
+  <!-- WHY NOVAK — WHY NOW -->
+  <div id="whyNovakCard" class="card" style="position:relative;">
+    <h2>Why NOVAK — Why Now?</h2>
+
+    <p style="margin-top:12px;font-size:16px;line-height:1.55;">
+      Automation now approves mortgages, denies veterans’ benefits, sets insurance rates,
+      steers vehicles, recommends surgeries, and moves trillions of dollars —
+      <strong>often without proof of correctness, legality, or integrity.</strong>
+    </p>
+
+    <p style="margin-top:14px;font-size:16px;line-height:1.55;">
+      NOVAK changes this — requiring mathematical proof <strong>before</strong>
+      any automated action occurs.
+    </p>
+
+    <ul style="margin-top:14px;font-size:15px;line-height:1.55;margin-left:18px;">
+      <li>If data changes → NOVAK detects instantly</li>
+      <li>If rule is wrong → NOVAK blocks execution</li>
+      <li>If fraud occurs → NOVAK produces evidence</li>
+      <li>If system glitches → NOVAK prevents harm</li>
+    </ul>
+
+    <p style="margin-top:14px;font-size:15px;line-height:1.55;font-weight:600;">
+      No blockchain. No cryptocurrency. No central authority.
+      Just cryptographic integrity.
+    </p>
+
+    <button class="action-btn" onclick="dismissWhyNovak()" style="margin-top:18px;">✅ Got it — Hide</button>
+    <button onclick="dismissWhyNovak()" style="position:absolute;top:14px;right:14px;background:none;border:none;font-size:20px;cursor:pointer;">✕</button>
+  </div>
+
+  <!-- ANALOGY BUTTONS -->
+  <div class="bubble-row">
+    <button class="bubble-btn" onclick="showIDontGetIt()">🤯 I don’t get it</button>
+    <button class="bubble-btn" onclick="showMilkshake()">🥤 Milkshake Analogy</button>
+    <button class="bubble-btn" onclick="showColoredPencil()">🖍 Colored Pencil Analogy</button>
+    <button class="bubble-btn" onclick="showKeyAnalogy()">🔑 Key Analogy</button>
+    <button class="bubble-btn" onclick="showGovSavings()">🏛 Government Savings</button>
+    <button class="bubble-btn" onclick="toggleHowWorks()">👀 Show Me How This Works</button>
+  </div>
+
+  <!-- SECTION SLOT — JS FILLS -->
+  <div id="explainBox" class="card" style="display:none;"></div>
+
 
   
